# SAMPHP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  index.html  install_libphp5.sh  params.json
build-vs2013/: php params windows.txt
build-vs2013/samphp/: samphp.def  samphp.sln  samphp.vcxproj  samphp.vcxproj.filters
server-folder/php/: gamemode.php
server-folder/php/core/: bootstrap.php  callbacks.php  callbacks.txt  commandtext.php  event.php  player.php  playercamera.php  playerevent.php  playertext3d.php  playertextdraw.php  racecheckpoint.php  storage.php  textdraw.php  vehicle.php
server-folder/php/ext/: readme.txt
server-folder/php/grandlarc/: gamemode.php  server.php
src/: amxplugin.cpp  bindings.cpp  bindings_callbacks.hpp  bindings_game.hpp  bindings_player.hpp  bindings_samphp.hpp  bindings_util.hpp  main.cpp  samphp.cpp  samphp.h  undef.h
src/fakeamx/: amx.h  array.h  fakeamx.c  fakeamx.h
src/sampgdk/: amxplugin.cpp  sampgdk.c  sampgdk.h
